--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,16 @@ after_success:
   - docker push y2gcoder/docker-backend
   - docker push y2gcoder/docker-nginx
 
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-fullstack-app"
+  env: "DockerFullstackApp-env"
+  bucket_name: "elasticbeanstalk-ap-northeast-2-320587317386"
+  bucket_path: "docker-fullstack-app"
+  on:
+    branch: master
 
-
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
 
